// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-tag snapshots should render disabled tag 1`] = `
<wpp-tag class="wpp-disabled wpp-tag" disabled="" exportparts="label, tooltip, tooltip-text, icon-start, overlay">
  <mock:shadow-root>
    <div class="icon-start slot-hidden" part="icon-start-wrapper">
      <slot name="icon-start" part="icon-start"></slot>
    </div>
    <wpp-typography part="label" tag="span" type="xs-midi"></wpp-typography>
    <div class="overlay" part="overlay"></div>
  </mock:shadow-root>
</wpp-tag>
`;

exports[`wpp-tag snapshots should render tag with categorical color index 1`] = `
<wpp-tag categorical-color-index="4" class="wpp-tag" exportparts="label, tooltip, tooltip-text, icon-start, overlay" style="--tag-bg-color: var(--wpp-dataviz-color-cat-light-4);">
  <mock:shadow-root>
    <div class="icon-start slot-hidden" part="icon-start-wrapper">
      <slot name="icon-start" part="icon-start"></slot>
    </div>
    <wpp-typography part="label" tag="span" type="xs-midi"></wpp-typography>
    <div class="overlay" part="overlay"></div>
  </mock:shadow-root>
</wpp-tag>
`;

exports[`wpp-tag snapshots should render tag with default props 1`] = `
<wpp-tag class="wpp-tag" exportparts="label, tooltip, tooltip-text, icon-start, overlay">
  <mock:shadow-root>
    <div class="icon-start slot-hidden" part="icon-start-wrapper">
      <slot name="icon-start" part="icon-start"></slot>
    </div>
    <wpp-typography part="label" tag="span" type="xs-midi"></wpp-typography>
    <div class="overlay" part="overlay"></div>
  </mock:shadow-root>
  <wpp-tag class="wpp-tag" exportparts="label, tooltip, tooltip-text, icon-start, overlay">
    <mock:shadow-root>
      <div class="icon-start slot-hidden" part="icon-start-wrapper">
        <slot name="icon-start" part="icon-start"></slot>
      </div>
      <wpp-typography part="label" tag="span" type="xs-midi"></wpp-typography>
      <div class="overlay" part="overlay"></div>
    </mock:shadow-root>
  </wpp-tag>
</wpp-tag>
`;

exports[`wpp-tag snapshots should render tag with neutral variant 1`] = `
<wpp-tag class="wpp-neutral wpp-tag" exportparts="label, tooltip, tooltip-text, icon-start, overlay" variant="neutral">
  <mock:shadow-root>
    <div class="icon-start slot-hidden" part="icon-start-wrapper">
      <slot name="icon-start" part="icon-start"></slot>
    </div>
    <wpp-typography part="label" tag="span" type="xs-midi"></wpp-typography>
    <div class="overlay" part="overlay"></div>
  </mock:shadow-root>
  <wpp-tag class="wpp-tag" exportparts="label, tooltip, tooltip-text, icon-start, overlay">
    <mock:shadow-root>
      <div class="icon-start slot-hidden" part="icon-start-wrapper">
        <slot name="icon-start" part="icon-start"></slot>
      </div>
      <wpp-typography part="label" tag="span" type="xs-midi"></wpp-typography>
      <div class="overlay" part="overlay"></div>
    </mock:shadow-root>
  </wpp-tag>
</wpp-tag>
`;

exports[`wpp-tag snapshots should render tag with warning variant and truncated label 1`] = `
<wpp-tag class="wpp-tag" exportparts="label, tooltip, tooltip-text, icon-start, overlay" label="This is a very long label that exceeds the maximum allowed characters.">
  <mock:shadow-root>
    <div class="icon-start slot-hidden" part="icon-start-wrapper">
      <slot name="icon-start" part="icon-start"></slot>
    </div>
    <wpp-typography part="label" tag="span" type="xs-midi">
      <wpp-tooltip part="tooltip" text="This is a very long label that exceeds the maximum allowed characters.">
        <span part="tooltip-text">
          This is a very long label tha…
        </span>
      </wpp-tooltip>
    </wpp-typography>
    <div class="overlay" part="overlay"></div>
  </mock:shadow-root>
</wpp-tag>
`;
